# neta

./: .env.example  .gitignore  .ruff.toml  LICENSE  Makefile  README.md  initial_prompt.md  initial_prompt_output.md  neta.code-workspace  pyproject.toml
config/: default.json  full.json
docs/: ARCHITECTURE.md  USAGE.md
docs/museum/: README.md
project/neta/: README.md  config.json  main.py  pyproject.toml
scripts/: run.sh  setup.sh
src/neta/: __init__.py  main.py
src/neta/api/: __init__.py  base.py  claude.py  client_factory.py  gemini.py  grok.py  openai.py  perplexity.py
src/neta/core/: __init__.py  automation.py  config.py  integration.py  router.py
src/neta/ui/: __init__.py  ai_platforms.py  browser.py  whatsapp.py
src/neta/utils/: __init__.py  cache.py  files.py  image_processing.py  logging.py
tests/neta/: __init__.py
tests/neta/core/: test_config.py
tests/neta/utils/: test_cache.py
